# stargazer

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
stargazer/: main.py
stargazer/api/: deps.py
stargazer/api/clients/: github.py
stargazer/api/dto/: starneighbour.py
stargazer/api/routes/: main.py  repos.py
stargazer/api/services/: star_neighbour_service.py
stargazer/core/: settings.py
tests/api/clients/: test_github_client.py
tests/api/routes/: test_repos.py
tests/api/services/: test_star_neighbour_service.py
