[tool.poetry]
name = "stargazer"
version = "0.1.0"
description = ""
authors = ["Stéphan Lascar <stephan@lascar.im>"]
readme = "README.md"
packages = [
    { include = "stargazer" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.14"}
aiohttp = "^3.12.13"
aiocache = "^0.12.3"


[tool.poetry.group.test.dependencies]
aioresponses = "^0.7.8"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
